# OpenCV

./: Cabecera.hpp  Fuente.cpp  README.md  imagen.pbm  main.cpp  persona.h
Ejm10/: Principal.cpp
Ejm11/: Principal.cpp
Ejm12/: Principal.cpp
Ejm8/: CMakeLists.txt  main.cpp
Ejm9/: Ecualización-Histograma-Ejemplo-Manual.ods
Examen/: CMakeLists.txt  Principal.cpp
Guia-Practicas-UNIDAD-3/: CMakeLists.txt  Principal.cpp  Procesamiento.cpp  Procesamiento.h  main.cpp  ~$9 Informe Practica U3.docx
Image/: CMakeLists.txt  imagen.ppm
PracPrueba/: Principal.cpp
PracticaPrueba/: CMakeLists.txt
Proyecto/: CMakeLists.txt  EjercicioClasesC.cpp  Principal.cpp  Procesamiento.cpp  Procesamiento.h  mai2.cpp  main.cpp
Proyectos/Ejm10/: CMakeLists.txt
Proyectos/Ejm11/: CMakeLists.txt
Proyectos/Ejm12/: CMakeLists.txt
Proyectos/Ejm13/: CMakeLists.txt  Principal.cpp
Proyectos/Ejm9/: CMakeLists.txt  Makefile  Principal.cpp  Vehiculos-Pruebas.odg
Proyectos/Image/: CMakeLists.txt  imagen.pbm  imagen.pgm  main.cpp
Proyectos/PracPrueba/: CMakeLists.txt  Principal.cpp
Proyectos/PracticaPrueba/: Principal.cpp
Prueba/: CMakeLists.txt  Principal.cpp  Práctica de laboratorio 12.1.1.7.docx
Test/: CMakeLists.txt  Fuente.cpp
